trunk/Archive2/ed/12097c67b4b385/output
main.cpp: In function 'int main()':
main.cpp:11:18: error: 'stoi' is not a member of 'std'
     int myint1 = std::stoi(str1);
                  ^
main.cpp:12:18: error: 'stoi' is not a member of 'std'
     int myint2 = std::stoi(str2);
                  ^
main.cpp:13:18: error: 'stoi' is not a member of 'std'
     int myint3 = std::stoi(str3);
                  ^
